# color-transform

./: README.md  cli.py  requirements.txt  setup.cfg
src/: transform.py
