[metadata]
name = color_transform
version = 0.0.1
author = Alex Munger
author-email = munger.alex@gmail.com
author-url = https://amunger3.github.io
home-page = https://github.com/amunger3/color-transform
description = A command line tool for working with colors.
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords = {color}
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Other Audience
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[flake8]
ignore =
    D203,
    E121,
    E123,
    E126,
    E127,
    E128,
    E201,
    E202,
    E203,
    E241,
    E402,
    E501,
    F401,
    W292,
    W504
exclude =
    .git,
    .idea,
    env,
    __pycache__,
    node_modules,
    build/,
    dist/,
    docs/,
    tests/
max-complexity = 20
max-line-length = 99